fix: Improved contrast for accessibility
Improved contrast for accessibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ img{
     display: block;
 }
 a {
-	color: orange;
+	color: #7f5200;
 	text-decoration: none;
 }
 a:hover, a:focus {
@@ -60,6 +60,9 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   padding: 25px;
   text-align: center;
   text-transform: uppercase;
+}
+#footer a{
+    color:orange;
 }
 /* ====================== Navigation ====================== */
 nav {
@@ -99,7 +102,7 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
+    color: #026DCA;
     text-decoration: none;
 }
 
@@ -224,7 +227,7 @@ a.button:focus{
   width: 100%;
 }
 #restaurant-name {
-  color: #f18200;
+  color: #A85A00;
   font-family: Arial,sans-serif;
   font-size: 20pt;
   font-weight: 200;
@@ -257,7 +260,7 @@ a.button:focus{
   padding: 30px 40px 30px;
 }
 #reviews-container h2 {
-  color: #f58500;
+  color: #A85A00;
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
